working on loading textures, need to mipmap without compatibility

--- a/WavefrontOBJViewer/WavefrontOBJViewer.csproj
+++ b/WavefrontOBJViewer/WavefrontOBJViewer.csproj
@@ -33,6 +33,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
+    <Reference Include="OpenTK.Compatibility">
+      <HintPath>bin\Debug\OpenTK.Compatibility.dll</HintPath>
+    </Reference>
     <Reference Include="OpenTK">
       <HintPath>bin\Debug\OpenTK.dll</HintPath>
     </Reference>
