experimenting with adding shaders

--- a/WavefrontOBJViewer/WavefrontOBJViewer.csproj
+++ b/WavefrontOBJViewer/WavefrontOBJViewer.csproj
@@ -55,6 +55,8 @@
     <Compile Include="SimpleScene\Meshes\wfOBJ\SSMesh_wfOBJ.cs" />
     <Compile Include="SimpleScene\Meshes\wfOBJ\SSMesh_wfOBJ_GLSL.cs" />
     <Compile Include="Main_setupScene.cs" />
+    <Compile Include="Main_setupShaders.cs" />
+    <Compile Include="SimpleScene\SSShader.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
