--- a/WavefrontOBJViewer/WavefrontOBJViewer.csproj
+++ b/WavefrontOBJViewer/WavefrontOBJViewer.csproj
@@ -33,6 +33,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
+    <Reference Include="OpenTK">
+      <HintPath>bin\Debug\OpenTK.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
@@ -57,6 +60,7 @@
     <Compile Include="Main_setupScene.cs" />
     <Compile Include="Main_setupShaders.cs" />
     <Compile Include="SimpleScene\SSShader.cs" />
+    <Compile Include="SimpleScene\Lights\SSLight.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -65,15 +69,10 @@
     <Folder Include="SimpleScene\Meshes\" />
     <Folder Include="SimpleScene\Util\" />
     <Folder Include="SimpleScene\Meshes\wfOBJ\" />
+    <Folder Include="SimpleScene\Lights\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="TODO.txt" />
     <None Include="TODO_BUG_hid_removal.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\OpenTK\opentk.git\Source\OpenTK\OpenTK.csproj">
-      <Project>{A37A7E14-0000-0000-0000-000000000000}</Project>
-      <Name>OpenTK</Name>
-    </ProjectReference>
   </ItemGroup>
 </Project>
