--- a/WavefrontOBJViewer/WavefrontOBJViewer.csproj
+++ b/WavefrontOBJViewer/WavefrontOBJViewer.csproj
@@ -45,14 +45,11 @@
     <Compile Include="SimpleScene\SSScene.cs" />
     <Compile Include="SimpleScene\Objects\SSObjectTriangle.cs" />
     <Compile Include="SimpleScene\Objects\SSObjectCube.cs" />
-    <Compile Include="SimpleScene\Objects\SSCameraThirdPerson.cs" />
-    <Compile Include="SimpleScene\SSCamera.cs" />
     <Compile Include="SimpleScene\SSAssetManager.cs" />
     <Compile Include="SimpleScene\SSVertexFormats.cs" />
     <Compile Include="SimpleScene\Meshes\SSMesh.cs" />
     <Compile Include="SimpleScene\Util\VertexSoup.cs" />
     <Compile Include="SimpleScene\Util\WavefrontObjLoader.cs" />
-    <Compile Include="SimpleScene\Objects\SSObject.cs" />
     <Compile Include="SimpleScene\Objects\SSObjectMesh.cs" />
     <Compile Include="SimpleScene\Meshes\wfOBJ\VertexSoup_VertexFormatBinder.cs" />
     <Compile Include="SimpleScene\Meshes\wfOBJ\SSMesh_wfOBJ.cs" />
@@ -61,6 +58,9 @@
     <Compile Include="Main_setupShaders.cs" />
     <Compile Include="SimpleScene\SSShader.cs" />
     <Compile Include="SimpleScene\Lights\SSLight.cs" />
+    <Compile Include="SimpleScene\Cameras\SSCamera.cs" />
+    <Compile Include="SimpleScene\Cameras\SSCameraThirdPerson.cs" />
+    <Compile Include="SimpleScene\SSObject.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -70,6 +70,7 @@
     <Folder Include="SimpleScene\Util\" />
     <Folder Include="SimpleScene\Meshes\wfOBJ\" />
     <Folder Include="SimpleScene\Lights\" />
+    <Folder Include="SimpleScene\Cameras\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="TODO.txt" />
