--- a/WavefrontOBJViewer/WavefrontOBJViewer.csproj
+++ b/WavefrontOBJViewer/WavefrontOBJViewer.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -8,7 +8,7 @@
     <ProjectGuid>{E028B740-9EBB-491B-8080-CDED0AAD2F92}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>WavefrontOBJViewer</RootNamespace>
-    <AssemblyName>OpenTKTest</AssemblyName>
+    <AssemblyName>WavefrontOBJViewer</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>True</DebugSymbols>
@@ -30,11 +30,13 @@
     <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>True</Externalconsole>
   </PropertyGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="Build\AssetCopy.target" />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="OpenTK">
-      <HintPath>bin\Debug\OpenTK.dll</HintPath>
+      <HintPath>Libs\OpenTK.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -62,18 +64,32 @@
     <Compile Include="SimpleScene\Cameras\SSCameraThirdPerson.cs" />
     <Compile Include="SimpleScene\SSObject.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <Folder Include="SimpleScene\" />
-    <Folder Include="SimpleScene\Objects\" />
-    <Folder Include="SimpleScene\Meshes\" />
-    <Folder Include="SimpleScene\Util\" />
-    <Folder Include="SimpleScene\Meshes\wfOBJ\" />
-    <Folder Include="SimpleScene\Lights\" />
-    <Folder Include="SimpleScene\Cameras\" />
-  </ItemGroup>
   <ItemGroup>
     <None Include="TODO.txt" />
     <None Include="TODO_BUG_hid_removal.txt" />
+    <CopyAsset Include="Assets\drone2\Drone2.mtl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </CopyAsset>
+    <CopyAsset Include="Assets\drone2\Drone2.obj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </CopyAsset>
+    <CopyAsset Include="Assets\drone2\drone2_bump.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </CopyAsset>
+    <CopyAsset Include="Assets\drone2\drone2_color.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </CopyAsset>
+    <CopyAsset Include="Assets\drone2\drone2_glow.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </CopyAsset>
+    <CopyAsset Include="Assets\drone2\drone2_spec.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </CopyAsset>
+    <CopyAsset Include="Assets\testcube.mtl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </CopyAsset>
+    <CopyAsset Include="Assets\testcube.obj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </CopyAsset>
   </ItemGroup>
 </Project>
