added a star field to the skybox

--- a/WavefrontOBJViewer/WavefrontOBJViewer.csproj
+++ b/WavefrontOBJViewer/WavefrontOBJViewer.csproj
@@ -65,6 +65,7 @@
     <Compile Include="SimpleScene\Core\SSTexture.cs" />
     <Compile Include="SimpleScene\Core\SSTexture_FromAsset.cs" />
     <Compile Include="SimpleScene\Objects\SSObjectMeshSky.cs" />
+    <Compile Include="SSMesh_Starfield.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="TODO.txt" />
