--- a/WavefrontOBJViewer/WavefrontOBJViewer.csproj
+++ b/WavefrontOBJViewer/WavefrontOBJViewer.csproj
@@ -20,6 +20,7 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>True</Externalconsole>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>none</DebugType>
@@ -29,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>True</Externalconsole>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="Build\AssetCopy.target" />
@@ -70,6 +72,8 @@
     <Compile Include="SimpleScene\Core\SSRay.cs" />
     <Compile Include="SimpleScene\Objects\SSObjectRay.cs" />
     <Compile Include="SimpleScene\Objects\SSObjectSphere.cs" />
+    <Compile Include="SimpleScene\Meshes\SSVertexBuffer.cs" />
+    <Compile Include="SimpleScene\Meshes\SSIndexBuffer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="TODO.txt" />
