GDIviaAGG clip paths work!

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ WavefrontOBJViewer/bin/**
 WavefrontOBJViewer/obj/**
 SimpleScene/bin/**
 SimpleScene/obj/**
+GDIviaAGGTest/bin/**
+GDIviaAGGTest/obj/**
 
 
 
