--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -60,6 +60,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\SSAABB.cs" />
     <Compile Include="Objects\SSObjectGDISurface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SSObject.cs" />
@@ -85,6 +86,7 @@
     <Compile Include="Util\RunningAverage.cs" />
     <Compile Include="Util\SSAssetManager.cs" />
     <Compile Include="Util\ssBVH\ssBVH.cs" />
+    <Compile Include="Util\ssBVH\ssBVH_Node.cs" />
     <Compile Include="Util\ssBVH\ssBVH_SSObject.cs" />
     <Compile Include="Util\VertexSoup.cs" />
     <Compile Include="Util\WavefrontObjLoader.cs" />
