--- a/WavefrontOBJViewer/WavefrontOBJViewer.csproj
+++ b/WavefrontOBJViewer/WavefrontOBJViewer.csproj
@@ -87,12 +87,10 @@
     <None Include="Assets\skybox\skybox_readme.txt" />
     <None Include="Assets\drone2\drone2_readme.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Assets\skybox\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\SimpleScene\_SimpleScene.csproj">
-      <Project>{4A7A056C-CB90-4F29-95DE-EAC471A6CBD7}</Project>
+      <Project>{4a7a056c-cb90-4f29-95de-eac471a6cbd7}</Project>
       <Name>_SimpleScene</Name>
     </ProjectReference>
   </ItemGroup>
