Draft of the occlusion query code

--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Meshes\Shapes\SSMeshDisk.cs" />
     <Compile Include="Objects\SSObjectBillboard.cs" />
     <Compile Include="Core\SSTextureWithAlpha.cs" />
+    <Compile Include="Objects\SSObjectSunFlare.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
