--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -109,11 +109,15 @@
     <Compile Include="Core\SSTextureWithAlpha.cs" />
     <Compile Include="Objects\SSObjectSunFlare.cs" />
     <Compile Include="Lights\SSSimpleShadowMap.cs" />
+    <Compile Include="Lights\SSParallelSplitShadowMap.cs" />
+    <Compile Include="Core\SSPssmShaderProgram.cs" />
+    <Compile Include="Lights\SSShadowMapBase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
   <ItemGroup>
     <Folder Include="Assets\" />
+    <Folder Include="Assets\Shaders\Shadowmap\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Assets\Shaders\ss1_fragment.glsl">
@@ -133,6 +137,15 @@
     </None>
     <None Include="..\Assets\Shaders\ss4_vertex.glsl">
       <Link>Assets\Shaders\ss4_vertex.glsl</Link>
+    </None>
+    <None Include="..\Assets\Shaders\Shadowmap\pssm_fragment.glsl">
+      <Link>Assets\Shaders\Shadowmap\pssm_fragment.glsl</Link>
+    </None>
+    <None Include="..\Assets\Shaders\Shadowmap\pssm_geometry.glsl">
+      <Link>Assets\Shaders\Shadowmap\pssm_geometry.glsl</Link>
+    </None>
+    <None Include="..\Assets\Shaders\Shadowmap\pssm_vertex.glsl">
+      <Link>Assets\Shaders\Shadowmap\pssm_vertex.glsl</Link>
     </None>
   </ItemGroup>
 </Project>
