scaffold for 2d tile game experiment

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ SimpleScene/bin/**
 SimpleScene/obj/**
 GDIviaAGGTest/bin/**
 GDIviaAGGTest/obj/**
+Example2DTileGame/obj/**
+Example2DTileGame/bin/**
 
 
 
