--- a/Example2DTileGame/Example2DTileGame.csproj
+++ b/Example2DTileGame/Example2DTileGame.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Main_setupInput.cs" />
     <Compile Include="Main_setupScene.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WireFrame.cs" />
     <Compile Include="TileScene\SSScene2DTiled.cs" />
   </ItemGroup>
   <ItemGroup>
